TEST_PROGRAMS/VALID/lucas_stinchcombe/lucas.min
# Computes the sequence of Lucas numbers for n=20
# Lucas Numbers are an instance of Lucas sequences starting with L0=2, L1=1

var l1: int;
var l2: int;
var n: int;
var sum: int;

l1 = 2;
l2 = 1;
n = 20;
l3 = 0;

print l1;
print l2;

while n do
  l3 = l1 + l2;
  print sum;
  l1 = l2;
  l2 = l3;
  n = n - 1;
done

