TEST_PROGRAMS/INVALID/lucas_stinchcombe/unsupported_types.min
# invalid minilang program that contains unsupported types

var l1: chicken;
var l2: cow;
var n: horse;
var sum: america;

l1 = 2;
l2 = 1;
n = 20;
l3 = 0;

print l1;
print l2;

while n do
  l3 = l1 + l2;
  print sum;
  l1 = l2;
  l2 = l3;
  n = n - 1;
done

